fixing spacing of links

--- a/assets/css/PITCHME.css
+++ b/assets/css/PITCHME.css
@@ -39,10 +39,23 @@
 }
 
 .north-west.span-50 p,
+.north-east.span-50 p
 .north-west.span-50 p > a,
-.north-east.span-50 p,
 .north-east.span-50 p > a {
-	color: red;
+	font-size: 1.25rem;
+	line-height: 1.25rem;
+}
+
+.north-west.span-50 p > a,
+.north-east.span-50 p > a {
+	margin: 0;
+	padding: 0;
+}
+
+.north-west.span-50 p,
+.north-east.span-50 p {
+	margin: 0;
+	margin-top: 10px;
 }
 
 .reveal ul, .reveal ol {
